# superstellar

./: .gitignore  README.md  generateProto.sh  main.go  package-lock.json
backend/ai/: bot.go  bot_manager.go  clever_bot.go
backend/communication/: client.go  file_writer.go  score_board_sender.go  sender.go  server.go
backend/events/: object_destroyed.go  projectile_fired.go  projectile_hit.go  target_angle.go  user_input.go
backend/game/: physics_ticker.go
backend/leaderboard/: full_leaderboard.go  full_leaderboard_test.go  leaderboard.go  rank.go
backend/monitor/: monitor.go
backend/pb/: superstellar.pb.go
backend/persistence/: score_board_reader.go  score_board_serializer.go
backend/simulation/: asteroid_manager.go  collision_manager.go  collisions.go  object_manager.go  projectile_manager.go  simple_collision.go  spaceship_manager.go  updater.go
backend/state/: asteroid.go  object.go  object_state.go  projectile.go  space.go  spaceship.go
backend/types/: point.go  vector.go
backend/types_test/: vector_test.go
protobuf/: superstellar.proto
rust-backend/: Cargo.toml  build.rs
rust-backend/src/: lib.rs  main.rs  server.rs  superstellar.rs  types.rs
rust-backend/src/game/: mod.rs
rust-backend/src/server/: client.rs  mod.rs
rust-backend/src/superstellar/: constants.rs  mod.rs
rust-backend/src/superstellar/entities/: asteroid.rs  mod.rs  space.rs  spaceship.rs
superstellar_utils/: main.go
webroot/: npm-shrinkwrap.json  package.json
webroot/js/: superstellar_proto.json
