[package]
name = "rust-backend"
version = "0.1.0"
authors = ["Kacper Madej <kacperoza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytes = "1.0.1" # pure bytes manipulations
log = "0.4.14"
prost = "0.7" # protobufs
tokio = { version = "1", features = ["full"] } # networking
tokio-tungstenite = "0.13.0" # Websockets
tracing = { version = "0.1.5", features = ["log-always"] } # tracing
simplelog = "0.9.0"
anyhow = "1.0"

[build-dependencies]
prost-build = { version = "0.7" }