[package]
name = "rust-backend"
version = "0.1.0"
authors = ["Kacper Madej <kacperoza@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
bytes = "1.0.1" # pure bytes manipulations
futures = "0.3"
futures-util = { version = "0.3", default-features = false, features = ["async-await", "sink", "std"] }
futures-channel = "0.3"
log = "0.4.14"
pin-project = "1.0"
prost = "0.7" # protobufs
prost-types = "0.7"
tokio = { version = "1.0.0", default-features = false, features = ["io-util", "io-std", "macros", "rt-multi-thread", "time"] } # networking
tokio-stream = "0.1.2"
tracing = { version = "0.1.5", features = ["log-always"] } # tracing
rand = "0.8.3"
simplelog = "0.9.0"
warp = "0.3"
uuid = { version = "0.8", features = ["v4"] }

[build-dependencies]
prost-build = { version = "0.7" }